# GAL-CHAT

./: OptionsGenerator.py  README.md  gal-chat.slnx  pyproject.toml  server.py  web_app.py
Client/: App.xaml  App.xaml.cs  Client.csproj
Client/GUI/: AddFriendWindow.xaml  AddFriendWindow.xaml.cs  AddGroupWindow.xaml  AddGroupWindow.xaml.cs  ChatWindow.xaml  ChatWindow.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  RegisterWindow.xaml.cs
Client/Models/: MessageModel.cs  UserSearchResult.cs
Client/Service/: Dispatcher.cs  NetworkService.cs  UserInfo.cs
Client/Window/: LoginWindow.xaml  LoginWindow.xaml.cs  RegisterWindow.xaml  RegisterWindow.xaml.cs
Server/: Program.cs  Server.csproj
Server/Service/: ActiveUserManager.cs  Dispatcher.cs  MysqlService.cs  NetworkService.cs  SearchService.cs  UserService.cs
client/: App.xaml.cs
client/Service/: NetworkService.cs  config.json
client/Window/: RegisterWindow.xaml
galchat/: agent.py  config.toml  deepseek.py  utils.py
static/: index.html
